--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -109,6 +109,11 @@ body {
 
 .paket {
   padding-top: 50px;
+  margin-bottom: 50px;
+}
+
+.paket a {
+  text-decoration: none;
 }
 
 .paket h2 {
@@ -119,10 +124,36 @@ body {
   font-size: 48px;
 }
 
+.paket .card h5 {
+  font-family: "Nunito", sans-serif;
+  color: black;
+  font-size: 24px;
+  text-align: justify;
+  font-weight: bold;
+}
+
+.paket .card h6 {
+  font-family: "Nunito", sans-serif;
+  color: #eba50d;
+  font-size: 18px;
+  margin-top: 15px;
+}
+
+.paket .card:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  background-color: #fdb31421;
+}
+
+.paket .card img {
+  padding: 10px;
+  border-radius: 15px;
+}
+
 footer {
   background-color: #fdb414;
-  margin: 20px 0px 0px 0px;
-  height: 50px;
+  bottom: 0;
+  min-height: 40px;
 }
 
 footer p {
@@ -131,10 +162,9 @@ footer p {
   font-size: 18px;
   font-weight: 600;
   text-align: center;
-  padding-top: 13px;
+  margin-bottom: 0px;
 }
 
-/* Style Login.html */
 .login-form {
   max-width: 400px;
 }
